# RpcCommandVariantsAsJson

./: .gitignore  CMakeLists.txt  azure-sdk-for-c.gitpatch  build.sh  debug.sh  run.sh
src/: CMakeLists.txt  azure_rpc_client.c  azure_rpc_client.h  main.c  rpc_client_config.h
src2/: CMakeLists.txt  mosquitto_rpc_client_sample.c  rpc_command_list.c  rpc_command_list.h  sample_config.h  vehicle03_unlock.h
